Fixed header alignment: center

--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ body {
 }
 
 .page-header {
+  display:block;
   text-align:center;
 }
 /*
